--- a/main.html
+++ b/main.html
@@ -1,35 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Footer Design</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome for social icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+<body>
 
-  <body>
-    <footer>
-      <div class="content">
-        <div class="top">
-          <div class="logo-details">
-            <span class="logo_name">company</span>
-          </div>
-          <div class="media-icons">
-            <!-- your code here -->
-          </div>
+<footer class="footer">
+    <div class="footer-top">
+        <div class="footer-column company">
+            <h1>company</h1>
         </div>
-        <div class="link-boxes">
-          <!-- your code here -->
+
+        <div class="footer-column">
+            <h3>Links</h3>
+            <ul>
+                <li>Home</li>
+                <li>Contact</li>
+                <li>About Us</li>
+                <li>Get Started</li>
+            </ul>
         </div>
-      </div>
-      <div class="bottom-details">
-        <!-- your code here -->
-      </div>
-    </footer>
-  </body>
+
+        <div class="footer-column">
+            <h3>Services</h3>
+            <ul>
+                <li>App Design</li>
+                <li>Web Design</li>
+                <li>Logo Design</li>
+                <li>Banner Design</li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Other services</h3>
+            <ul>
+                <li>SEO</li>
+                <li>Content Marketing</li>
+                <li>Prints</li>
+                <li>Social Media</li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Contact</h3>
+            <ul>
+                <li>+91 8879887262</li>
+                <li>+91 8879887262</li>
+                <li>contact@company.com</li>
+            </ul>
+        </div>
+
+        <div class="social-icons">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>Copyright © 2021 company.</p>
+        <p class="privacy">Privacy policy</p>
+    </div>
+</footer>
+
+</body>
 </html>
