--- a/main.html
+++ b/main.html
@@ -1,73 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Footer Design</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Font Awesome for social icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-</head>
-<body>
-
 <footer class="footer">
-    <div class="footer-top">
-        <div class="footer-column company">
-            <h1>company</h1>
-        </div>
-
-        <div class="footer-column">
-            <h3>Links</h3>
-            <ul>
-                <li>Home</li>
-                <li>Contact</li>
-                <li>About Us</li>
-                <li>Get Started</li>
-            </ul>
-        </div>
-
-        <div class="footer-column">
-            <h3>Services</h3>
-            <ul>
-                <li>App Design</li>
-                <li>Web Design</li>
-                <li>Logo Design</li>
-                <li>Banner Design</li>
-            </ul>
-        </div>
-
-        <div class="footer-column">
-            <h3>Other services</h3>
-            <ul>
-                <li>SEO</li>
-                <li>Content Marketing</li>
-                <li>Prints</li>
-                <li>Social Media</li>
-            </ul>
-        </div>
-
-        <div class="footer-column">
-            <h3>Contact</h3>
-            <ul>
-                <li>+91 8879887262</li>
-                <li>+91 8879887262</li>
-                <li>contact@company.com</li>
-            </ul>
-        </div>
-
-        <div class="social-icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin-in"></i>
-            <i class="fab fa-youtube"></i>
-        </div>
+  <div class="footer-top">
+    <h2 class="logo">company</h2>
+    <div class="social-links">
+      <a href="#" class="media-icons fb">f</a>
+      <a href="#" class="media-icons tw">t</a>
+      <a href="#" class="media-icons ig">i</a>
+      <a href="#" class="media-icons li">in</a>
+      <a href="#" class="media-icons yt">y</a>
     </div>
+  </div>
 
-    <div class="footer-bottom">
-        <p>Copyright © 2021 company.</p>
-        <p class="privacy">Privacy policy</p>
+  <div class="footer-grid">
+    <div class="footer-col">
+      <h3>Links</h3>
+      <a href="#">Home</a>
+      <a href="#">Contact</a>
+      <a href="#">About Us</a>
+      <a href="#">Get Started</a>
     </div>
+    <div class="footer-col">
+      <h3>Services</h3>
+      <a href="#">App Design</a>
+      <a href="#">Web Design</a>
+      <a href="#">Logo Design</a>
+      <a href="#">Banner Design</a>
+    </div>
+    <div class="footer-col">
+      <h3>Other services</h3>
+      <a href="#">SEO</a>
+      <a href="#">Content Marketing</a>
+      <a href="#">Prints</a>
+      <a href="#">Social Media</a>
+    </div>
+    <div class="footer-col">
+      <h3>Contact</h3>
+      <p>+91 8879887262</p>
+      <p>+91 8879887262</p>
+      <p>contact@company.com</p>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>Copyright © 2021 company.</p>
+    <p>Privacy policy</p>
+  </div>
 </footer>
-
-</body>
-</html>
