--- a/main.html
+++ b/main.html
@@ -1,4 +1,14 @@
-<footer class="footer">
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+	<!-- the entire body must be written by student -->
+	<footer class="footer">
   <div class="footer-top">
     <h2 class="logo">company</h2>
     <div class="social-links">
@@ -45,3 +55,9 @@
     <p>Privacy policy</p>
   </div>
 </footer>
+    <script type="text/javascript" src="./script.js">
+</script>
+
+</body>
+
+</html>
