--- a/main.html
+++ b/main.html
@@ -1,63 +1,78 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Footer</title>
+
+  <link rel="stylesheet" href="styles.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<footer class="footer">
-  <div class="footer-top">
-    <h2 class="logo">company</h2>
-    <div class="social-links">
-      <a href="#" class="media-icons fb">f</a>
-      <a href="#" class="media-icons tw">t</a>
-      <a href="#" class="media-icons ig">i</a>
-      <a href="#" class="media-icons li">in</a>
-      <a href="#" class="media-icons yt">y</a>
-    </div>
-  </div>
+  <footer>
+    <div class="content">
+      <!-- TOP -->
+      <div class="top">
+        <div class="logo-details">
+          <span class="logo_name">company</span>
+        </div>
 
-  <div class="footer-grid">
-    <div class="footer-col">
-      <h3>Links</h3>
-      <a href="#">Home</a>
-      <a href="#">Contact</a>
-      <a href="#">About Us</a>
-      <a href="#">Get Started</a>
-    </div>
-    <div class="footer-col">
-      <h3>Services</h3>
-      <a href="#">App Design</a>
-      <a href="#">Web Design</a>
-      <a href="#">Logo Design</a>
-      <a href="#">Banner Design</a>
-    </div>
-    <div class="footer-col">
-      <h3>Other services</h3>
-      <a href="#">SEO</a>
-      <a href="#">Content Marketing</a>
-      <a href="#">Prints</a>
-      <a href="#">Social Media</a>
-    </div>
-    <div class="footer-col">
-      <h3>Contact</h3>
-      <p>+91 8879887262</p>
-      <p>+91 8879887262</p>
-      <p>contact@company.com</p>
-    </div>
-  </div>
+        <div class="media-icons">
+          <a href="#"><i class="fa fa-facebook-f"></i></a>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-linkedin"></i></a>
+          <a href="#"><i class="fa fa-youtube"></i></a>
+        </div>
+      </div>
 
-  <div class="footer-bottom">
-    <p>Copyright © 2021 company.</p>
-    <p>Privacy policy</p>
-  </div>
-</footer>
-    <script type="text/javascript" src="./script.js">
-</script>
+      <!-- LINKS -->
+      <div class="link-boxes">
+        <ul class="box">
+          <li class="link_name">Links</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Get Started</a></li>
+        </ul>
 
+        <ul class="box">
+          <li class="link_name">Services</li>
+          <li><a href="#">App Design</a></li>
+          <li><a href="#">Web Design</a></li>
+          <li><a href="#">Logo Design</a></li>
+          <li><a href="#">Banner Design</a></li>
+        </ul>
+
+        <ul class="box">
+          <li class="link_name">Other services</li>
+          <li><a href="#">SEO</a></li>
+          <li><a href="#">Content Marketing</a></li>
+          <li><a href="#">Prints</a></li>
+          <li><a href="#">Social Media</a></li>
+        </ul>
+
+        <ul class="box">
+          <li class="link_name">Contact</li>
+          <li>+91 8879887262</li>
+          <li>+91 8879887262</li>
+          <li>contact@company.com</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- BOTTOM -->
+    <div class="bottom-details">
+      <div class="bottom_text">
+        <span>Copyright © 2021 company.</span>
+        <span><a href="#">Privacy policy</a></span>
+      </div>
+    </div>
+  </footer>
 </body>
-
 </html>
